updated module 2 and Module 3 content